--- a/proj_ipod/src/App.css
+++ b/proj_ipod/src/App.css
@@ -62,6 +62,10 @@
 
 #selectButton {
     position: absolute;
-    left: 22px;
-    top: 34px;
+    left: 43px;
+    top: 46px;
+    border: 2px solid black;
+    height: 37%;
+    border-radius: 50%;
+    width: 40%;
 }
