added css for menu screen

--- a/proj_ipod/src/Monitor.css
+++ b/proj_ipod/src/Monitor.css
@@ -10,17 +10,22 @@
 }
 .Menu
 {
-    display:block;
+    display: block;
     border: 2px solid black;
-    width: 80px;
+    width: 95px;
     height: 100%;
-    position: relative;
-    top:-8%;
-    padding: 0%;
-    padding-right:20px ;
+    position: absolute;
 }
-.Menu li{
+.Menu ul
+{
+    height: 100%;
+    position: absolute;
+    left: -40px;
+    top: -17px;
+}
+.Menu ul li{
     list-style: none;
     border: 2px solid black;
     height: 23%;
+    width: 91px;
 }
