--- a/proj_ipod/src/App.css
+++ b/proj_ipod/src/App.css
@@ -1,3 +1,18 @@
+
+@keyframes rotate
+{
+    from{
+        transform: rotateX(0deg);
+        
+    }
+    to
+    {
+        transform: rotateX(360deg);
+       
+    }
+}
+
+
 .Case
 {
     border: 2px solid black;
@@ -6,6 +21,9 @@
     position: absolute;
     left: 600px;
     top: 170px;
+    animation: rotate 1s ease-in-out 1;
+    transform-style: preserve-3d;
+    perspective: 1000px;
 }
 .KeyPad
 {
@@ -76,3 +94,4 @@
     left: 140px;
     top:-10px;
 }
+
