--- a/proj_ipod/src/Monitor.css
+++ b/proj_ipod/src/Monitor.css
@@ -2,11 +2,18 @@
 {
     border: 2px solid black;
     height: 206px;
-    width: 176px;
+    width: 287px;
     position: absolute;
     left: 8%;
     top: 2%;
     padding: 0%;
+    border-radius:20px ;
+    background-color: white;
+    background-image: url('./assets/jon-tyson-eIhH7RTlTZA-unsplash.jpg');
+    background-size: cover;
+    /* bottom: 58.07%; */
+
+/* background: url(.jpg), #FFFFFF; */
 }
 .Menu
 {
