--- a/proj_ipod/src/Player.css
+++ b/proj_ipod/src/Player.css
@@ -24,10 +24,10 @@
 #Setting
 {
     background-image: url('https://images.unsplash.com/photo-1613205132101-06b9a203905a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=975&q=80');
-    background-size: contain;
+   
     height: 206px;
     width: 287px;
-    background-size: contain;
+    background-size: cover;
     position: absolute;
     border-radius: 20px;
     top:0px;
