--- a/proj_ipod/src/musicPlayer.css
+++ b/proj_ipod/src/musicPlayer.css
@@ -8,3 +8,21 @@
     border-radius: 20px;
     top:0px;
 }
+
+#img
+{
+    height: 90px;
+    width: 90px;
+    border:2px solid white ;
+    border-radius: 20px;
+    position: absolute;
+    left:97px;
+    top:30px;
+    box-shadow: -1px 2px 10px #E5E5E5;
+}
+#img img
+{
+    height: 100%;
+    width: 100%;
+    border-radius:20px ;
+}
