--- a/proj_ipod/src/App.css
+++ b/proj_ipod/src/App.css
@@ -118,3 +118,16 @@ body
 
 
 
+@keyframes mymove {
+    0%{background-color: red;}
+    25%{background-color: rgb(201, 78, 99);}
+    50%{background-color: yellow;}
+    75%{background-color: rgb(0, 255, 136);}
+    100% {background-color: blue;}
+}
+
+
+.clyleColor
+{
+    animation: mymove 5s infinite alternate;
+}
