--- a/proj_ipod/src/App.css
+++ b/proj_ipod/src/App.css
@@ -28,8 +28,8 @@ body
     width :350px;
     height :500px;
     position: absolute;
-    left: 546px;
-    top: 170px;
+    left: 40%;
+    top: 24%;
     background-image: url('./assets/dark-background-gradient-geometric-models_23-2148430535.jpg');
     background-size: cover;
     box-shadow: 0px -5px 10px #E5E5E5;
