--- a/proj_ipod/src/App.css
+++ b/proj_ipod/src/App.css
@@ -139,3 +139,22 @@ body
     left: 35px;
     color: blue;
 }
+
+
+@media only screen and (max-width: 600px) 
+{
+    .Case
+    {
+        position: absolute;
+        left: 30%;
+    }
+}
+
+@media only screen and (max-width: 540px) 
+{
+    .Case
+    {
+        position: absolute;
+        left: 10%;
+    }
+}
